src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASYNC
    AWAIT
    CATCH
    DEFER
    DIDSET
    DO
    ENUM
    EXTENSION
    IMPORT
    INTERNAL
    PRIVATE
    PROTOCOL
    PUBLIC
    SEMI_COLON
    SET
    SOME
    STATIC
    STRUCT
    THROW
    THROWS
    TRY
    WILLSET

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> variable_declaration
Rule 5     statement -> assignment
Rule 6     statement -> for_statement
Rule 7     statement -> if_statement
Rule 8     statement -> guard_statement
Rule 9     statement -> while_statement
Rule 10    statement -> switch_statement
Rule 11    statement -> function_declaration
Rule 12    statement -> function_call_statement
Rule 13    statement -> class_declaration
Rule 14    statement -> expression_statement
Rule 15    statement -> return_statement
Rule 16    statement -> break_statement
Rule 17    statement -> continue_statement
Rule 18    statement -> NEWLINE
Rule 19    expression_statement -> expression
Rule 20    variable_declaration -> LET IDENTIFIER COLON type_annotation ASSIGN expression
Rule 21    variable_declaration -> VAR IDENTIFIER COLON type_annotation ASSIGN expression
Rule 22    variable_declaration -> LET IDENTIFIER ASSIGN expression
Rule 23    variable_declaration -> VAR IDENTIFIER ASSIGN expression
Rule 24    variable_declaration -> LET IDENTIFIER COLON type_annotation
Rule 25    variable_declaration -> VAR IDENTIFIER COLON type_annotation
Rule 26    variable_declaration -> LET IDENTIFIER COLON tuple_type
Rule 27    variable_declaration -> VAR IDENTIFIER COLON tuple_type
Rule 28    type_annotation -> TYPE_INT
Rule 29    type_annotation -> TYPE_DOUBLE
Rule 30    type_annotation -> TYPE_BOOL
Rule 31    type_annotation -> TYPE_STRING
Rule 32    type_annotation -> array_type
Rule 33    type_annotation -> dictionary_type
Rule 34    type_annotation -> optional_type
Rule 35    type_annotation -> tuple_type
Rule 36    type_annotation -> IDENTIFIER
Rule 37    optional_type -> TYPE_INT QUESTION
Rule 38    optional_type -> TYPE_DOUBLE QUESTION
Rule 39    optional_type -> TYPE_BOOL QUESTION
Rule 40    optional_type -> TYPE_STRING QUESTION
Rule 41    array_type -> LBRACKET type_annotation RBRACKET
Rule 42    expression -> LBRACKET array_elements RBRACKET
Rule 43    expression -> LBRACKET RBRACKET
Rule 44    array_elements -> array_elements COMMA expression
Rule 45    array_elements -> expression
Rule 46    expression -> expression LBRACKET expression RBRACKET
Rule 47    dictionary_type -> LBRACKET type_annotation COLON type_annotation RBRACKET
Rule 48    expression -> LBRACKET dictionary_pairs RBRACKET
Rule 49    expression -> LBRACKET COLON RBRACKET
Rule 50    dictionary_pairs -> dictionary_pairs COMMA dictionary_pair
Rule 51    dictionary_pairs -> dictionary_pair
Rule 52    dictionary_pair -> expression COLON expression
Rule 53    tuple_type -> LPAREN tuple_type_elements RPAREN
Rule 54    tuple_type_elements -> tuple_type_elements COMMA tuple_type_element
Rule 55    tuple_type_elements -> tuple_type_element
Rule 56    tuple_type_element -> IDENTIFIER COLON type_annotation
Rule 57    tuple_type_element -> type_annotation
Rule 58    expression -> LPAREN tuple_elements RPAREN
Rule 59    tuple_elements -> tuple_elements COMMA tuple_element
Rule 60    tuple_elements -> tuple_element
Rule 61    tuple_element -> IDENTIFIER COLON expression
Rule 62    tuple_element -> expression
Rule 63    expression -> expression DOT INT_LITERAL
Rule 64    expression -> expression DOT IDENTIFIER
Rule 65    assignment -> lvalue ASSIGN expression
Rule 66    assignment -> lvalue PLUS_ASSIGN expression
Rule 67    assignment -> lvalue MINUS_ASSIGN expression
Rule 68    assignment -> lvalue TIMES_ASSIGN expression
Rule 69    assignment -> lvalue DIV_ASSIGN expression
Rule 70    assignment -> lvalue MOD_ASSIGN expression
Rule 71    lvalue -> IDENTIFIER
Rule 72    lvalue -> SELF DOT IDENTIFIER
Rule 73    lvalue -> lvalue DOT IDENTIFIER
Rule 74    lvalue -> lvalue LBRACKET expression RBRACKET
Rule 75    expression -> expression PLUS expression
Rule 76    expression -> expression MINUS expression
Rule 77    expression -> expression TIMES expression
Rule 78    expression -> expression DIVIDE expression
Rule 79    expression -> expression MODULO expression
Rule 80    expression -> MINUS expression
Rule 81    expression -> PLUS expression
Rule 82    expression -> expression AND expression
Rule 83    expression -> expression OR expression
Rule 84    expression -> NOT expression
Rule 85    expression -> expression EQ expression
Rule 86    expression -> expression NE expression
Rule 87    expression -> expression GT expression
Rule 88    expression -> expression LT expression
Rule 89    expression -> expression GE expression
Rule 90    expression -> expression LE expression
Rule 91    expression -> expression QUESTION expression COLON expression
Rule 92    expression -> expression NIL_COALESCE expression
Rule 93    expression -> LPAREN expression RPAREN
Rule 94    expression -> INT_LITERAL
Rule 95    expression -> FLOAT_LITERAL
Rule 96    expression -> STRING
Rule 97    expression -> TRUE
Rule 98    expression -> FALSE
Rule 99    expression -> NIL
Rule 100   expression -> IDENTIFIER
Rule 101   expression -> SELF DOT IDENTIFIER
Rule 102   expression -> IDENTIFIER LPAREN argument_list RPAREN
Rule 103   expression -> IDENTIFIER LPAREN RPAREN
Rule 104   for_statement -> for_header LBRACE statement_list RBRACE
Rule 105   for_header -> FOR IDENTIFIER IN range_expression
Rule 106   for_header -> FOR IDENTIFIER IN expression
Rule 107   range_expression -> expression CLOSED_RANGE expression
Rule 108   range_expression -> expression HALF_OPEN_RANGE expression
Rule 109   if_statement -> IF expression LBRACE statement_list RBRACE
Rule 110   if_statement -> IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 111   if_statement -> IF expression LBRACE statement_list RBRACE else_if_chain
Rule 112   if_statement -> IF expression LBRACE statement_list RBRACE else_if_chain ELSE LBRACE statement_list RBRACE
Rule 113   else_if_chain -> else_if_chain else_if_statement
Rule 114   else_if_chain -> else_if_statement
Rule 115   else_if_statement -> ELSE IF expression LBRACE statement_list RBRACE
Rule 116   guard_statement -> GUARD expression ELSE LBRACE statement_list RBRACE
Rule 117   while_statement -> while_header LBRACE statement_list RBRACE
Rule 118   while_header -> WHILE expression
Rule 119   break_statement -> BREAK
Rule 120   continue_statement -> CONTINUE
Rule 121   switch_statement -> SWITCH expression LBRACE optional_newlines case_list optional_newlines RBRACE
Rule 122   switch_statement -> SWITCH expression LBRACE optional_newlines case_list default_case optional_newlines RBRACE
Rule 123   case_list -> case_list optional_newlines case_clause
Rule 124   case_list -> optional_newlines case_clause
Rule 125   case_clause -> CASE case_patterns COLON optional_newlines case_body
Rule 126   case_body -> statement_list
Rule 127   case_patterns -> case_patterns COMMA expression
Rule 128   case_patterns -> expression
Rule 129   default_case -> DEFAULT COLON optional_newlines case_body
Rule 130   optional_newlines -> optional_newlines NEWLINE
Rule 131   optional_newlines -> empty
Rule 132   function_declaration -> func_header LBRACE statement_list RBRACE
Rule 133   func_header -> FUNC IDENTIFIER LPAREN parameter_list RPAREN ARROW type_annotation
Rule 134   func_header -> FUNC IDENTIFIER LPAREN RPAREN ARROW type_annotation
Rule 135   func_header -> FUNC IDENTIFIER LPAREN parameter_list RPAREN
Rule 136   func_header -> FUNC IDENTIFIER LPAREN RPAREN
Rule 137   parameter_list -> parameter_list COMMA parameter
Rule 138   parameter_list -> parameter
Rule 139   parameter -> IDENTIFIER COLON type_annotation
Rule 140   parameter -> IDENTIFIER COLON type_annotation ASSIGN expression
Rule 141   return_statement -> RETURN expression
Rule 142   return_statement -> RETURN
Rule 143   function_call_statement -> IDENTIFIER LPAREN argument_list RPAREN
Rule 144   function_call_statement -> IDENTIFIER LPAREN RPAREN
Rule 145   argument_list -> argument_list COMMA expression
Rule 146   argument_list -> expression
Rule 147   class_declaration -> class_header LBRACE class_body RBRACE
Rule 148   class_header -> CLASS IDENTIFIER
Rule 149   class_body -> class_body class_member
Rule 150   class_body -> class_member
Rule 151   class_body -> empty
Rule 152   class_member -> property_declaration
Rule 153   class_member -> init_declaration
Rule 154   class_member -> method_declaration
Rule 155   class_member -> computed_property
Rule 156   class_member -> NEWLINE
Rule 157   property_declaration -> VAR IDENTIFIER COLON type_annotation
Rule 158   property_declaration -> LET IDENTIFIER COLON type_annotation
Rule 159   property_declaration -> VAR IDENTIFIER COLON tuple_type
Rule 160   property_declaration -> LET IDENTIFIER COLON tuple_type
Rule 161   computed_property -> VAR IDENTIFIER COLON type_annotation LBRACE optional_newlines GET LBRACE optional_newlines statement_list optional_newlines RBRACE optional_newlines RBRACE
Rule 162   init_declaration -> init_header LBRACE statement_list RBRACE
Rule 163   init_header -> INIT LPAREN parameter_list RPAREN
Rule 164   init_header -> INIT LPAREN RPAREN
Rule 165   method_declaration -> method_header LBRACE statement_list RBRACE
Rule 166   method_header -> FUNC IDENTIFIER LPAREN parameter_list RPAREN ARROW type_annotation
Rule 167   method_header -> FUNC IDENTIFIER LPAREN RPAREN ARROW type_annotation
Rule 168   method_header -> FUNC IDENTIFIER LPAREN parameter_list RPAREN
Rule 169   method_header -> FUNC IDENTIFIER LPAREN RPAREN
Rule 170   empty -> <empty>

Terminals, with rules where they appear

AND                  : 82
ARROW                : 133 134 166 167
ASSIGN               : 20 21 22 23 65 140
ASYNC                : 
AWAIT                : 
BREAK                : 119
CASE                 : 125
CATCH                : 
CLASS                : 148
CLOSED_RANGE         : 107
COLON                : 20 21 24 25 26 27 47 49 52 56 61 91 125 129 139 140 157 158 159 160 161
COMMA                : 44 50 54 59 127 137 145
CONTINUE             : 120
DEFAULT              : 129
DEFER                : 
DIDSET               : 
DIVIDE               : 78
DIV_ASSIGN           : 69
DO                   : 
DOT                  : 63 64 72 73 101
ELSE                 : 110 112 115 116
ENUM                 : 
EQ                   : 85
EXTENSION            : 
FALSE                : 98
FLOAT_LITERAL        : 95
FOR                  : 105 106
FUNC                 : 133 134 135 136 166 167 168 169
GE                   : 89
GET                  : 161
GT                   : 87
GUARD                : 116
HALF_OPEN_RANGE      : 108
IDENTIFIER           : 20 21 22 23 24 25 26 27 36 56 61 64 71 72 73 100 101 102 103 105 106 133 134 135 136 139 140 143 144 148 157 158 159 160 161 166 167 168 169
IF                   : 109 110 111 112 115
IMPORT               : 
IN                   : 105 106
INIT                 : 163 164
INTERNAL             : 
INT_LITERAL          : 63 94
LBRACE               : 104 109 110 110 111 112 112 115 116 117 121 122 132 147 161 161 162 165
LBRACKET             : 41 42 43 46 47 48 49 74
LE                   : 90
LET                  : 20 22 24 26 158 160
LPAREN               : 53 58 93 102 103 133 134 135 136 143 144 163 164 166 167 168 169
LT                   : 88
MINUS                : 76 80
MINUS_ASSIGN         : 67
MODULO               : 79
MOD_ASSIGN           : 70
NE                   : 86
NEWLINE              : 18 130 156
NIL                  : 99
NIL_COALESCE         : 92
NOT                  : 84
OR                   : 83
PLUS                 : 75 81
PLUS_ASSIGN          : 66
PRIVATE              : 
PROTOCOL             : 
PUBLIC               : 
QUESTION             : 37 38 39 40 91
RBRACE               : 104 109 110 110 111 112 112 115 116 117 121 122 132 147 161 161 162 165
RBRACKET             : 41 42 43 46 47 48 49 74
RETURN               : 141 142
RPAREN               : 53 58 93 102 103 133 134 135 136 143 144 163 164 166 167 168 169
SELF                 : 72 101
SEMI_COLON           : 
SET                  : 
SOME                 : 
STATIC               : 
STRING               : 96
STRUCT               : 
SWITCH               : 121 122
THROW                : 
THROWS               : 
TIMES                : 77
TIMES_ASSIGN         : 68
TRUE                 : 97
TRY                  : 
TYPE_BOOL            : 30 39
TYPE_DOUBLE          : 29 38
TYPE_INT             : 28 37
TYPE_STRING          : 31 40
VAR                  : 21 23 25 27 157 159 161
WHILE                : 118
WILLSET              : 
error                : 

Nonterminals, with rules where they appear

argument_list        : 102 143 145
array_elements       : 42 44
array_type           : 32
assignment           : 5
break_statement      : 16
case_body            : 125 129
case_clause          : 123 124
case_list            : 121 122 123
case_patterns        : 125 127
class_body           : 147 149
class_declaration    : 13
class_header         : 147
class_member         : 149 150
computed_property    : 155
continue_statement   : 17
default_case         : 122
dictionary_pair      : 50 51
dictionary_pairs     : 48 50
dictionary_type      : 33
else_if_chain        : 111 112 113
else_if_statement    : 113 114
empty                : 131 151
expression           : 19 20 21 22 23 44 45 46 46 52 52 61 62 63 64 65 66 67 68 69 70 74 75 75 76 76 77 77 78 78 79 79 80 81 82 82 83 83 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 91 92 92 93 106 107 107 108 108 109 110 111 112 115 116 118 121 122 127 128 140 141 145 146
expression_statement : 14
for_header           : 104
for_statement        : 6
func_header          : 132
function_call_statement : 12
function_declaration : 11
guard_statement      : 8
if_statement         : 7
init_declaration     : 153
init_header          : 162
lvalue               : 65 66 67 68 69 70 73 74
method_declaration   : 154
method_header        : 165
optional_newlines    : 121 121 122 122 123 124 125 129 130 161 161 161 161
optional_type        : 34
parameter            : 137 138
parameter_list       : 133 135 137 163 166 168
program              : 0
property_declaration : 152
range_expression     : 105
return_statement     : 15
statement            : 2 3
statement_list       : 1 2 104 109 110 110 111 112 112 115 116 117 126 132 161 162 165
switch_statement     : 10
tuple_element        : 59 60
tuple_elements       : 58 59
tuple_type           : 26 27 35 159 160
tuple_type_element   : 54 55
tuple_type_elements  : 53 54
type_annotation      : 20 21 24 25 41 47 47 56 57 133 134 139 140 157 158 161 166 167
variable_declaration : 4
while_header         : 117
while_statement      : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . variable_declaration
    (5) statement -> . assignment
    (6) statement -> . for_statement
    (7) statement -> . if_statement
    (8) statement -> . guard_statement
    (9) statement -> . while_statement
    (10) statement -> . switch_statement
    (11) statement -> . function_declaration
    (12) statement -> . function_call_statement
    (13) statement -> . class_declaration
    (14) statement -> . expression_statement
    (15) statement -> . return_statement
    (16) statement -> . break_statement
    (17) statement -> . continue_statement
    (18) statement -> . NEWLINE
    (20) variable_declaration -> . LET IDENTIFIER COLON type_annotation ASSIGN expression
    (21) variable_declaration -> . VAR IDENTIFIER COLON type_annotation ASSIGN expression
    (22) variable_declaration -> . LET IDENTIFIER ASSIGN expression
    (23) variable_declaration -> . VAR IDENTIFIER ASSIGN expression
    (24) variable_declaration -> . LET IDENTIFIER COLON type_annotation
    (25) variable_declaration -> . VAR IDENTIFIER COLON type_annotation
    (26) variable_declaration -> . LET IDENTIFIER COLON tuple_type
    (27) variable_declaration -> . VAR IDENTIFIER COLON tuple_type
    (65) assignment -> . lvalue ASSIGN expression
    (66) assignment -> . lvalue PLUS_ASSIGN expression
    (67) assignment -> . lvalue MINUS_ASSIGN expression
    (68) assignment -> . lvalue TIMES_ASSIGN expression
    (69) assignment -> . lvalue DIV_ASSIGN expression
    (70) assignment -> . lvalue MOD_ASSIGN expression
    (104) for_statement -> . for_header LBRACE statement_list RBRACE
    (109) if_statement -> . IF expression LBRACE statement_list RBRACE
    (110) if_statement -> . IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (111) if_statement -> . IF expression LBRACE statement_list RBRACE else_if_chain
    (112) if_statement -> . IF expression LBRACE statement_list RBRACE else_if_chain ELSE LBRACE statement_list RBRACE
    (116) guard_statement -> . GUARD expression ELSE LBRACE statement_list RBRACE
    (117) while_statement -> . while_header LBRACE statement_list RBRACE
    (121) switch_statement -> . SWITCH expression LBRACE optional_newlines case_list optional_newlines RBRACE
    (122) switch_statement -> . SWITCH expression LBRACE optional_newlines case_list default_case optional_newlines RBRACE
    (132) function_declaration -> . func_header LBRACE statement_list RBRACE
    (143) function_call_statement -> . IDENTIFIER LPAREN argument_list RPAREN
    (144) function_call_statement -> . IDENTIFIER LPAREN RPAREN
    (147) class_declaration -> . class_header LBRACE class_body RBRACE
    (19) expression_statement -> . expression
    (141) return_statement -> . RETURN expression
    (142) return_statement -> . RETURN
    (119) break_statement -> . BREAK
    (120) continue_statement -> . CONTINUE
    (71) lvalue -> . IDENTIFIER
    (72) lvalue -> . SELF DOT IDENTIFIER
    (73) lvalue -> . lvalue DOT IDENTIFIER
    (74) lvalue -> . lvalue LBRACKET expression RBRACKET
    (105) for_header -> . FOR IDENTIFIER IN range_expression
    (106) for_header -> . FOR IDENTIFIER IN expression
    (118) while_header -> . WHILE expression
    (133) func_header -> . FUNC IDENTIFIER LPAREN parameter_list RPAREN ARROW type_annotation
    (134) func_header -> . FUNC IDENTIFIER LPAREN RPAREN ARROW type_annotation
    (135) func_header -> . FUNC IDENTIFIER LPAREN parameter_list RPAREN
    (136) func_header -> . FUNC IDENTIFIER LPAREN RPAREN
    (148) class_header -> . CLASS IDENTIFIER
    (42) expression -> . LBRACKET array_elements RBRACKET
    (43) expression -> . LBRACKET RBRACKET
    (46) expression -> . expression LBRACKET expression RBRACKET
    (48) expression -> . LBRACKET dictionary_pairs RBRACKET
    (49) expression -> . LBRACKET COLON RBRACKET
    (58) expression -> . LPAREN tuple_elements RPAREN
    (63) expression -> . expression DOT INT_LITERAL
    (64) expression -> . expression DOT IDENTIFIER
    (75) expression -> . expression PLUS expression
    (76) expression -> . expression MINUS expression
    (77) expression -> . expression TIMES expression
    (78) expression -> . expression DIVIDE expression
    (79) expression -> . expression MODULO expression
    (80) expression -> . MINUS expression
    (81) expression -> . PLUS expression
    (82) expression -> . expression AND expression
    (83) expression -> . expression OR expression
    (84) expression -> . NOT expression
    (85) expression -> . expression EQ expression
    (86) expression -> . expression NE expression
    (87) expression -> . expression GT expression
    (88) expression -> . expression LT expression
    (89) expression -> . expression GE expression
    (90) expression -> . expression LE expression
    (91) expression -> . expression QUESTION expression COLON expression
    (92) expression -> . expression NIL_COALESCE expression
    (93) expression -> . LPAREN expression RPAREN
    (94) expression -> . INT_LITERAL
    (95) expression -> . FLOAT_LITERAL
    (96) expression -> . STRING
    (97) expression -> . TRUE
    (98) expression -> . FALSE
    (99) expression -> . NIL
    (100) expression -> . IDENTIFIER
    (101) expression -> . SELF DOT IDENTIFIER
    (102) expression -> . IDENTIFIER LPAREN argument_list RPAREN
    (103) expression -> . IDENTIFIER LPAREN RPAREN

    NEWLINE         shift and go to state 18
    LET             shift and go to state 19
    VAR             shift and go to state 22
    IF              shift and go to state 25
    GUARD           shift and go to state 26
    SWITCH          shift and go to state 28
    IDENTIFIER      shift and go to state 20
    RETURN          shift and go to state 32
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 34
    SELF            shift and go to state 35
    FOR             shift and go to state 37
    WHILE           shift and go to state 38
    FUNC            shift and go to state 39
    CLASS           shift and go to state 40
    LBRACKET        shift and go to state 36
    LPAREN          shift and go to state 30
    MINUS           shift and go to state 43
    PLUS            shift and go to state 42
    NOT             shift and go to state 44
    INT_LITERAL     shift and go to state 41
    FLOAT_LITERAL   shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    NIL             shift and go to state 49

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    variable_declaration           shift and go to state 4
    assignment                     shift and go to state 5
    for_statement                  shift and go to state 6
    if_statement                   shift and go to state 7
    guard_statement                shift and go to state 8
    while_statement                shift and go to state 9
    switch_statement               shift and go to state 10
    function_declaration           shift and go to state 11
    function_call_statement        shift and go to state 12
    class_declaration              shift and go to state 13
    expression_statement           shift and go to state 14
    return_statement               shift and go to state 15
    break_statement                shift and go to state 16
    continue_statement             shift and go to state 17
    expression                     shift and go to state 21
    lvalue                         shift and go to state 23
    for_header                     shift and go to state 24
    while_header                   shift and go to state 27
    func_header                    shift and go to state 29
    class_header                   shift and go to state 31

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . variable_declaration
    (5) statement -> . assignment
    (6) statement -> . for_statement
    (7) statement -> . if_statement
    (8) statement -> . guard_statement
    (9) statement -> . while_statement
    (10) statement -> . switch_statement
    (11) statement -> . function_declaration
    (12) statement -> . function_call_statement
    (13) statement -> . class_declaration
    (14) statement -> . expression_statement
    (15) statement -> . return_statement
    (16) statement -> . break_statement
    (17) statement -> . continue_statement
    (18) statement -> . NEWLINE
    (20) variable_declaration -> . LET IDENTIFIER COLON type_annotation ASSIGN expression
    (21) variable_declaration -> . VAR IDENTIFIER COLON type_annotation ASSIGN expression
    (22) variable_declaration -> . LET IDENTIFIER ASSIGN expression
    (23) variable_declaration -> . VAR IDENTIFIER ASSIGN expression
    (24) variable_declaration -> . LET IDENTIFIER COLON type_annotation
    (25) variable_declaration -> . VAR IDENTIFIER COLON type_annotation
    (26) variable_declaration -> . LET IDENTIFIER COLON tuple_type
    (27) variable_declaration -> . VAR IDENTIFIER COLON tuple_type
    (65) assignment -> . lvalue ASSIGN expression
    (66) assignment -> . lvalue PLUS_ASSIGN expression
    (67) assignment -> . lvalue MINUS_ASSIGN expression
    (68) assignment -> . lvalue TIMES_ASSIGN expression
    (69) assignment -> . lvalue DIV_ASSIGN expression
    (70) assignment -> . lvalue MOD_ASSIGN expression
    (104) for_statement -> . for_header LBRACE statement_list RBRACE
    (109) if_statement -> . IF expression LBRACE statement_list RBRACE
    (110) if_statement -> . IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (111) if_statement -> . IF expression LBRACE statement_list RBRACE else_if_chain
    (112) if_statement -> . IF expression LBRACE statement_list RBRACE else_if_chain ELSE LBRACE statement_list RBRACE
    (116) guard_statement -> . GUARD expression ELSE LBRACE statement_list RBRACE
    (117) while_statement -> . while_header LBRACE statement_list RBRACE
    (121) switch_statement -> . SWITCH expression LBRACE optional_newlines case_list optional_newlines RBRACE
    (122) switch_statement -> . SWITCH expression LBRACE optional_newlines case_list default_case optional_newlines RBRACE
    (132) function_declaration -> . func_header LBRACE statement_list RBRACE
    (143) function_call_statement -> . IDENTIFIER LPAREN argument_list RPAREN
    (144) function_call_statement -> . IDENTIFIER LPAREN RPAREN
    (147) class_declaration -> . class_header LBRACE class_body RBRACE
    (19) expression_statement -> . expression
    (141) return_statement -> . RETURN expression
    (142) return_statement -> . RETURN
    (119) break_statement -> . BREAK
    (120) continue_statement -> . CONTINUE
    (71) lvalue -> . IDENTIFIER
    (72) lvalue -> . SELF DOT IDENTIFIER
    (73) lvalue -> . lvalue DOT IDENTIFIER
    (74) lvalue -> . lvalue LBRACKET expression RBRACKET
    (105) for_header -> . FOR IDENTIFIER IN range_expression
    (106) for_header -> . FOR IDENTIFIER IN expression
    (118) while_header -> . WHILE expression
    (133) func_header -> . FUNC IDENTIFIER LPAREN parameter_list RPAREN ARROW type_annotation
    (134) func_header -> . FUNC IDENTIFIER LPAREN RPAREN ARROW type_annotation
    (135) func_header -> . FUNC IDENTIFIER LPAREN parameter_list RPAREN
    (136) func_header -> . FUNC IDENTIFIER LPAREN RPAREN
    (148) class_header -> . CLASS IDENTIFIER
    (42) expression -> . LBRACKET array_elements RBRACKET
    (43) expression -> . LBRACKET RBRACKET
    (46) expression -> . expression LBRACKET expression RBRACKET
    (48) expression -> . LBRACKET dictionary_pairs RBRACKET
    (49) expression -> . LBRACKET COLON RBRACKET
    (58) expression -> . LPAREN tuple_elements RPAREN
    (63) expression -> . expression DOT INT_LITERAL
    (64) expression -> . expression DOT IDENTIFIER
    (75) expression -> . expression PLUS expression
    (76) expression -> . expression MINUS expression
    (77) expression -> . expression TIMES expression
    (78) expression -> . expression DIVIDE expression
    (79) expression -> . expression MODULO expression
    (80) expression -> . MINUS expression
    (81) expression -> . PLUS expression
    (82) expression -> . expression AND expression
    (83) expression -> . expression OR expression
    (84) expression -> . NOT expression
    (85) expression -> . expression EQ expression
    (86) expression -> . expression NE expression
    (87) expression -> . expression GT expression
    (88) expression -> . expression LT expression
    (89) expression -> . expression GE expression
    (90) expression -> . expression LE expression
    (91) expression -> . expression QUESTION expression COLON expression
    (92) expression -> . expression NIL_COALESCE expression
    (93) expression -> . LPAREN expression RPAREN
    (94) expression -> . INT_LITERAL
    (95) expression -> . FLOAT_LITERAL
    (96) expression -> . STRING
    (97) expression -> . TRUE
    (98) expression -> . FALSE
    (99) expression -> . NIL
    (100) expression -> . IDENTIFIER
    (101) expression -> . SELF DOT IDENTIFIER
    (102) expression -> . IDENTIFIER LPAREN argument_list RPAREN
    (103) expression -> . IDENTIFIER LPAREN RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    NEWLINE         shift and go to state 18
    LET             shift and go to state 19
    VAR             shift and go to state 22
    IF              shift and go to state 25
    GUARD           shift and go to state 26
    SWITCH          shift and go to state 28
    IDENTIFIER      shift and go to state 20
    RETURN          shift and go to state 32
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 34
    SELF            shift and go to state 35
    FOR             shift and go to state 37
    WHILE           shift and go to state 38
    FUNC            shift and go to state 39
    CLASS           shift and go to state 40
    LBRACKET        shift and go to state 36
    LPAREN          shift and go to state 30
    MINUS           shift and go to state 43
    PLUS            shift and go to state 42
    NOT             shift and go to state 44
    INT_LITERAL     shift and go to state 41
    FLOAT_LITERAL   shift and go to state 45
    STRING          shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    NIL             shift and go to state 49

    statement                      shift and go to state 50
    variable_declaration           shift and go to state 4
    assignment                     shift and go to state 5
    for_statement                  shift and go to state 6
    if_statement                   shift and go to state 7
    guard_statement                shift and go to state 8
    while_statement                shift and go to state 9
    switch_statement               shift and go to state 10
    function_declaration           shift and go to state 11
    function_call_statement        shift and go to state 12
    class_declaration              shift and go to state 13
    expression_statement           shift and go to state 14
    return_statement               shift and go to state 15
    break_statement                shift and go to state 16
    continue_statement             shift and go to state 17
    expression                     shift and go to state 21
    lvalue                         shift and go to state 23
    for_header                     shift and go to state 24
    while_header                   shift and go to state 27
    func_header                    shift and go to state 29
    class_header                   shift and go to state 31

state 3

    (3) statement_list -> statement .

    NEWLINE         reduce using rule 3 (statement_list -> statement .)
    LET             reduce using rule 3 (statement_list -> statement .)
    VAR             reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    GUARD           reduce using rule 3 (statement_list -> statement .)
    SWITCH          reduce using rule 3 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    BREAK           reduce using rule 3 (statement_list -> statement .)
    CONTINUE        reduce using rule 3 (statement_list -> statement .)
    SELF            reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    FUNC            reduce using rule 3 (statement_list -> statement .)
    CLASS           reduce using rule 3 (statement_list -> statement .)
    LBRACKET        reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    MINUS           reduce using rule 3 (statement_list -> statement .)
    PLUS            reduce using rule 3 (statement_list -> statement .)
    NOT             reduce using rule 3 (statement_list -> statement .)
    INT_LITERAL     reduce using rule 3 (statement_list -> statement .)
    FLOAT_LITERAL   reduce using rule 3 (statement_list -> statement .)
    STRING          reduce using rule 3 (statement_list -> statement .)
    TRUE            reduce using rule 3 (statement_list -> statement .)
    FALSE           reduce using rule 3 (statement_list -> statement .)
    NIL             reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)
    DEFAULT         reduce using rule 3 (statement_list -> statement .)
    CASE            reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> variable_declaration .

    NEWLINE         reduce using rule 4 (statement -> variable_declaration .)
    LET             reduce using rule 4 (statement -> variable_declaration .)
    VAR             reduce using rule 4 (statement -> variable_declaration .)
    IF              reduce using rule 4 (statement -> variable_declaration .)
    GUARD           reduce using rule 4 (statement -> variable_declaration .)
    SWITCH          reduce using rule 4 (statement -> variable_declaration .)
    IDENTIFIER      reduce using rule 4 (statement -> variable_declaration .)
    RETURN          reduce using rule 4 (statement -> variable_declaration .)
    BREAK           reduce using rule 4 (statement -> variable_declaration .)
    CONTINUE        reduce using rule 4 (statement -> variable_declaration .)
    SELF            reduce using rule 4 (statement -> variable_declaration .)
    FOR             reduce using rule 4 (statement -> variable_declaration .)
    WHILE           reduce using rule 4 (statement -> variable_declaration .)
    FUNC            reduce using rule 4 (statement -> variable_declaration .)
    CLASS           reduce using rule 4 (statement -> variable_declaration .)
    LBRACKET        reduce using rule 4 (statement -> variable_declaration .)
    LPAREN          reduce using rule 4 (statement -> variable_declaration .)
    MINUS           reduce using rule 4 (statement -> variable_declaration .)
    PLUS            reduce using rule 4 (statement -> variable_declaration .)
    NOT             reduce using rule 4 (statement -> variable_declaration .)
    INT_LITERAL     reduce using rule 4 (statement -> variable_declaration .)
    FLOAT_LITERAL   reduce using rule 4 (statement -> variable_declaration .)
    STRING          reduce using rule 4 (statement -> variable_declaration .)
    TRUE            reduce using rule 4 (statement -> variable_declaration .)
    FALSE           reduce using rule 4 (statement -> variable_declaration .)
    NIL             reduce using rule 4 (statement -> variable_declaration .)
    $end            reduce using rule 4 (statement -> variable_declaration .)
    RBRACE          reduce using rule 4 (statement -> variable_declaration .)
    DEFAULT         reduce using rule 4 (statement -> variable_declaration .)
    CASE            reduce using rule 4 (statement -> variable_declaration .)


state 5

    (5) statement -> assignment .
